@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_userhost.c,v 1.7 2000/10/29 20:04:30 lusky Exp $
+ *   $Id: m_userhost.c,v 1.8 2000/11/18 19:11:12 lusky Exp $
  */
 
 #include "m_commands.h"
@@ -154,10 +154,9 @@ int     m_userhost(struct Client *cptr,
       cn = p;
     }
 
-  ircsprintf(buf, "%s%s %s %s %s %s",
-    form_str(RPL_USERHOST),
+  ircsprintf(buf, "%s %s %s %s %s",
     response[0], response[1], response[2], response[3], response[4] );
-  sendto_one(sptr, "%s", buf, me.name, parv[0]);
+  sendto_one(sptr, form_str(RPL_USERHOST), me.name, parv[0], buf);
 
   return 0;
 }
