@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: messages_cust.tab,v 1.9 2000/04/21 23:39:26 lusky Exp $
+ * $Id: messages_cust.tab,v 1.10 2000/06/10 02:45:36 lusky Exp $
  *
  */
 /* 
@@ -330,7 +330,7 @@ static  char *  replies[] = {
 /* 299 */       (char *)NULL,
 /* 300 RPL_NONE, */     (char *)NULL,
 /* 301 RPL_AWAY, */     ":%s 301 %s %s :%s",
-/* 302 RPL_USERHOST, */  ":%s 302 %s :",
+/* 302 RPL_USERHOST, */  ":%s 302 %s :%s",
 /* 303 RPL_ISON, */     ":%s 303 %s :",
 /* 304 RPL_TEXT, */      (char *)NULL,
 /* 305 RPL_UNAWAY, */   ":%s 305 %s :OK, you're not /away anymore. Did you have fun?",
