@@ -1,3 +1,12 @@
+*** 20001124_1 by lusky
+fixed IPQuadTab corruption issue [werd!@#@!#!@] (db/pvr)
+added hide_ops (db)
+
+
+*** 20001122_1 by lusky
+fixed the m_userhost fix
+
+
 *** 20001121_1 by lusky
 revved patchlevel to rc7
 redundant if in server_estab() (gp)
